# edgephp

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  build-wasm.sh  build.sh  php_baseline_benchmark.json  php_execution_baseline.json  run-playground.sh  temp_test.php  temp_warm_minimal.php  wasm_dump.txt
benchmark/: README.md  benchmark_results.json  check_wasm.js  compile_all.sh  run_benchmark.js  run_benchmark.sh  runner.js  update_playground.sh
docs/: ARCHITECTURE.md  EXTENSIONS.md  MISSING_FEATURES.md  PLAYGROUND_FEATURES.md  RUNTIME_SPEC.md
examples/: arithmetic.php  benchmark_arrays.php  benchmark_arrays_simple.php  benchmark_const_folding.php  benchmark_fibonacci.php  benchmark_fibonacci_timed_php.php  benchmark_optimizations.php  benchmark_unboxed.php  build-test.php  comparisons.php  comprehensive.php  hello.php  php-tags.php  strings.php  test_array_assign.php  test_simple_array.php  variables.php
playground/: README.md  index.html  package-lock.json  package.json  test.html  vite.config.js
test/: test-suite.sh  test.wasm  test_150.php  test_150.wasm  test_add.php  test_add.wasm  test_add_debug.php  test_add_debug.wasm  test_arithmetic.php  test_arithmetic.wasm  test_benchmark_display.html  test_bool.php  test_bool.wasm  test_clean.wasm  test_comparison.php  test_comparison.wasm  test_comparison_verify.php  test_comparison_verify.wasm  test_comparisons.wasm  test_compile_debug2.wasm  test_concat.php  test_concat.wasm  test_concat_v1.wasm  test_debug.wasm  test_default.php  test_default.wasm  (+99 more)
(+160 files in other folders)
